--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   }
 }
